# MSc_RtspStreaming_Cpp

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  presentation_video.7z
H264StreamingAPI/: AvH264Decoder.cc  AvH264Decoder.h  AvH264EncConfig.h  AvH264Encoder.cc  AvH264Encoder.h  AvH264Reader.cc  AvH264Reader.h  AvH264Writer.cc  AvH264Writer.h  CMakeLists.txt  H264File.cc  H264File.h  Timestamp.cc  Timestamp.h
NetworkManagerAPI/: CMakeLists.txt  NetworkClientHandler.cc  NetworkClientHandler.h  NetworkDecryptor.cc  NetworkDecryptor.h  NetworkEncryptor.cc  NetworkEncryptor.h  NetworkManager.cc  NetworkManager.h  NetworkUser.cc  NetworkUser.h  StreamListPackage.cc  StreamListPackage.h  StringPackage.cc  StringPackage.h
NetworkManagerAPI/apps/: crypto_example.cc
RtspClient/: CMakeLists.txt
RtspClient/forms/: mainwindow.ui  signindialog.ui  signupdialog.ui
RtspClient/include/: clickable_label.h  mainwindow.h  network_user_worker.h  rtp_frame_package.h  rtp_header.h  rtsp_method_enum.h  rtsp_package.h  rtsp_parser.h  rtsp_url_info.h  signindialog.h  signupdialog.h  streaming_worker.h
RtspClient/src/: clickable_label.cc  main.cpp  mainwindow.cpp  network_user_worker.cpp  rtp_frame_package.cc  rtsp_package.cc  rtsp_parser.cc  signindialog.cpp  signupdialog.cpp  streaming_worker.cpp
RtspServer/: CMakeLists.txt  README.md  rtsp_server_main.cc
RtspServer/EnterpriseEmitter/: CMakeLists.txt  EnterpriseEmitter.cc  EnterpriseEmitter.h
RtspServer/EnterpriseEmitter/OnDemand/: OnDemandSession.cc  OnDemandSession.h
RtspServer/OnDemand/: OnDemandSession.cc  OnDemandSession.h
RtspServer/PHZ76_RtspServer/: CMakeLists.txt  Makefile
RtspServer/PHZ76_RtspServer/VS2017/: rtsp.vcxproj  rtsp.vcxproj.filters
RtspServer/PHZ76_RtspServer/example/: rtsp_h264_file.cpp  rtsp_pusher.cpp  rtsp_server.cpp
RtspServer/PHZ76_RtspServer/src/net/: BufferReader.cpp  BufferReader.h  BufferWriter.h  EpollTaskScheduler.cpp  EpollTaskScheduler.h  EventLoop.cpp  EventLoop.h  Logger.cpp  MemoryManager.cpp  MemoryManager.h  MulticastAddr.cpp  NetInterface.cpp  NetInterface.h  SelectTaskScheduler.h  Socket.h  SocketUtil.cpp  SocketUtil.h  TcpServer.h  TcpSocket.cpp  TcpSocket.h  Timer.h  Timestamp.cpp  Timestamp.h  log.h
RtspServer/PHZ76_RtspServer/src/xop/: AACSource.cpp  AACSource.h  DigestAuthentication.cpp  DigestAuthentication.h  G711ASource.cpp  G711ASource.h  H264Parser.cpp  H264Parser.h  H264Source.cpp  H264Source.h  H265Source.cpp  H265Source.h  MediaSession.cpp  MediaSession.h  MediaSource.h  RtpConnection.cpp  RtpConnection.h  RtspConnection.cpp  RtspConnection.h  RtspMessage.cpp  RtspMessage.h  RtspPusher.cpp  RtspPusher.h  RtspServer.cpp  RtspServer.h  media.h  rtp.h  rtsp.h
RtspServer/RtspServerUtils/: AvH264.cc  AvH264.h  CMakeLists.txt
apps/: CMakeLists.txt  camera_streaming.cc  h264_video_streaming.cc
doc/: master_e1-12_2020.doc  prezentacija_master_e1-12_2020.pptx  sablon_DOI.docx  zbornik_clanak_e1-12_2020.docx
net/: Acceptor.cc  Acceptor.h  BufferReader.cc  BufferReader.h  BufferWriter.cc  CMakeLists.txt  Channel.cc  Channel.h  Logger.cc  Logger.h  MulticastAddr.h  Pipe.cpp  Pipe.h  RingBuffer.h  SelectTaskScheduler.cc  TaskScheduler.cc  TaskScheduler.h  TcpConnection.cc  TcpConnection.h  TcpServer.cc  Timer.cc
rtsp/: CMakeLists.txt  DigestAuthentication.cc  DigestAuthentication.h  MediaSession.cpp  MediaSession.h  MediaSource.h  RtpConnection.cpp  RtpConnection.h  RtspConnection.cpp  RtspConnection.h  RtspMessage.cpp  RtspMessage.h  RtspPusher.cpp  RtspPusher.h  RtspServer.cpp  RtspServer.h  media.h  rtp.h  rtsp.h
rtsp/MediaConverter/: AvH264.cc  AvH264.h  CMakeLists.txt  H264File.cc  H264Parser.cc  H264Parser.h
rtsp/MediaSource/: AACSource.cc  AACSource.h  CMakeLists.txt  G711ASource.cc  G711ASource.h  H264Source.cc  H264Source.h  H265Source.cc  H265Source.h
