project(H264StreamingAPI)

file(GLOB SRV_UTILS_SRC_FILES 
	"${CMAKE_CURRENT_SOURCE_DIR}/*.cpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/*.cc"
)

file(GLOB SRV_UTILS_HEADER_FILES 
	"${CMAKE_CURRENT_SOURCE_DIR}/*.hpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/*.h"
)

add_library(${PROJECT_NAME} STATIC
	"${SRV_UTILS_HEADER_FILES}"
	"${SRV_UTILS_SRC_FILES}"
)
