project(H264StreamingAPI)

file(GLOB H264_STREAMING_SRC_FILES 
	"${CMAKE_CURRENT_SOURCE_DIR}/*.cpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/*.cc"
)

file(GLOB H264_STREAMING_HEADER_FILES 
	"${CMAKE_CURRENT_SOURCE_DIR}/*.hpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/*.h"
)

add_library(${PROJECT_NAME} STATIC
	"${H264_STREAMING_HEADER_FILES}"
	"${H264_STREAMING_SRC_FILES}"
)
