project(NetworkManagerAPI)

file(GLOB NETWORK_MANAGER_SRC_FILES 
	"${CMAKE_CURRENT_SOURCE_DIR}/*.cpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/*.cc"
)

file(GLOB NETWORK_MANAGER_HEADER_FILES 
	"${CMAKE_CURRENT_SOURCE_DIR}/*.hpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/*.h"
)

add_library(${PROJECT_NAME} STATIC
	"${NETWORK_MANAGER_HEADER_FILES}"
	"${NETWORK_MANAGER_SRC_FILES}"
)
