project(EnterpriseEmitter)

file(GLOB ENTERPRISE_EMITTER_SRC_FILES 
	"${CMAKE_CURRENT_SOURCE_DIR}/*.cpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/OnDemand/*.cpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/*.cc"
	"${CMAKE_CURRENT_SOURCE_DIR}/OnDemand/*.cc"
)

file(GLOB ENTERPRISE_EMITTER_HEADER_FILES 
	"${CMAKE_CURRENT_SOURCE_DIR}/*.hpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/OnDemand/*.hpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/*.h"
	"${CMAKE_CURRENT_SOURCE_DIR}/OnDemand/*.h"
)

add_library(${PROJECT_NAME} STATIC
	"${ENTERPRISE_EMITTER_HEADER_FILES}"
	"${ENTERPRISE_EMITTER_SRC_FILES}"
)
