project(MediaSource)

file(GLOB MEDIA_SOURCE_SRC_FILES 
	"${CMAKE_CURRENT_SOURCE_DIR}/*.cpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/*.cc"
)

file(GLOB MEDIA_SOURCE_HEADER_FILES 
	"${CMAKE_CURRENT_SOURCE_DIR}/*.hpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/*.h"
)

add_library("${PROJECT_NAME}" STATIC
	"${MEDIA_SOURCE_SRC_FILES}"
	"${MEDIA_SOURCE_HEADER_FILES}"
)
